--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>T-listing</title>
-    <link rel="stylesheet" href="../dist/css/output.css">
-</head>
-<body>
-    <p class="text-5xl text-red-700">Hello word</p>
-</body>
+    <link rel="stylesheet" href="../dist/css/output.css" />
+  </head>
+  <body>
+    <nav>
+      <div class="w-9/12 mx-auto py-5 flex justify-between items-center font-comfortaa">
+        <div>
+          <a class="text-lg" href="#">Tail Listing</a>
+        </div>
+        <div>
+          <button
+            class="py-2 px-4 rounded-md border border-amber-500 bg-transparent hover:bg-amber-500 text-amber-500 hover:text-white transition-all"
+          >
+            Add Listing
+          </button>
+        </div>
+        <div class="space-x-4">
+          <button class="text-lg">Sign In</button>
+          <button class="text-lg">Sign Up</button>
+        </div>
+      </div>
+    </nav>
+  </body>
 </html>
