--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>T-listing</title>
     <link rel="stylesheet" href="../dist/css/output.css" />
+    <!-- Google Fonts Icons -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,1,0"
+    />
   </head>
   <body>
-    <nav>
-      <div class="w-9/12 mx-auto py-5 flex justify-between items-center font-comfortaa">
+    <!-- Start NavBar ...............................................................-->
+    <nav class="absolute right-0 left-0 z-10 text-white">
+      <div
+        class="w-9/12 mx-auto py-5 flex justify-between items-center font-comfortaa"
+      >
         <div>
           <a class="text-lg" href="#">Tail Listing</a>
         </div>
@@ -26,5 +34,127 @@
         </div>
       </div>
     </nav>
+    <!-- /NavBar ...................................................................-->
+    <!-- Start Banner ...............................................................-->
+    <div class="relative h-screen">
+      <img
+        class="h-full w-full object-cover"
+        src="./assets/images/hero/hero_4.jpg"
+        alt="hero_4"
+      />
+      <!-- Overlay -->
+      <div class="absolute inset-0 bg-black/70"></div>
+      <!-- /Overlay -->
+      <div class="absolute inset-0 h-full w-full">
+        <div class="flex min-h-full w-full items-center justify-center">
+          <!-- Container -->
+          <div class="space-y-6">
+            <!-- TEXT -->
+            <div class="text-white text-center">
+              <p class="text-4xl capitalize font-bold mb-4 font-comfortaa">
+                Discover places that people love
+              </p>
+              <p class="text-lg">
+                We will help you find the best places in the world.
+              </p>
+            </div>
+            <!-- /TEXT -->
+            <!-- Inputs -->
+            <div class="flex gap-5">
+              <div>
+                <input
+                  class="rounded-md w-80 bg-white text-gray-600 py-3 px-4 focus:outline-none"
+                  type="text"
+                  placeholder="Location"
+                />
+              </div>
+              <div>
+                <input
+                  class="rounded-md w-80 bg-white text-gray-600 py-3 px-4 focus:outline-none"
+                  type="text"
+                  placeholder="I'm Loking For..."
+                />
+              </div>
+              <div>
+                <button
+                  class="rounded-md py-2.5 px-6 bg-amber-500 text-lg text-white hover:bg-amber-600"
+                >
+                  <span class="material-symbols-outlined align-middle"> search </span> Search
+                </button>
+              </div>
+            </div>
+            <!-- /Inputs -->
+            <!-- Popular places -->
+            <div>
+              <ul class="flex gap-5 justify-center text-sm text-white">
+                <li class="captalize">
+                  <a class="hover:text-amber-500" href="#">
+                    <span
+                      class="material-symbols-outlined align-middle hidden md:inline-flex"
+                    >
+                      restaurant_menu
+                    </span>
+                    Restaurants
+                  </a>
+                </li>
+                <li class="captalize">
+                  <a class="hover:text-amber-500" href="#">
+                    <span
+                      class="material-symbols-outlined align-middle hidden md:inline-flex"
+                    >
+                      local_cafe
+                    </span>
+                    Cafe
+                  </a>
+                </li>
+                <li class="captalize">
+                  <a class="hover:text-amber-500" href="#">
+                    <span
+                      class="material-symbols-outlined align-middle hidden md:inline-flex"
+                    >
+                      fitness_center
+                    </span>
+                    Gym
+                  </a>
+                </li>
+                <li class="captalize">
+                  <a class="hover:text-amber-500" href="#">
+                    <span
+                      class="material-symbols-outlined align-middle hidden md:inline-flex"
+                    >
+                      medication_liquid
+                    </span>
+                    Hospital
+                  </a>
+                </li>
+                <li class="captalize">
+                  <a class="hover:text-amber-500" href="#">
+                    <span
+                      class="material-symbols-outlined align-middle hidden md:inline-flex"
+                    >
+                      school
+                    </span>
+                    School
+                  </a>
+                </li>
+                <li class="captalize">
+                  <a class="hover:text-amber-500" href="#">
+                    <span
+                      class="material-symbols-outlined align-middle hidden md:inline-flex"
+                    >
+                      shopping_cart
+                    </span>
+                    Shopping
+                  </a>
+                </li>
+              </ul>
+            </div>
+            <!-- /Popular places -->
+          </div>
+          <!-- /container -->
+        </div>
+      </div>
+    </div>
+    <!-- /Banner ...............................................................-->
   </body>
 </html>
