--- a/src/index.html
+++ b/src/index.html
@@ -161,7 +161,7 @@
     <!-- /Banner ...............................................................-->
     <!-- Body(Main-content) ...............................................................-->
     <div>
-      <!-- Section -->
+      <!-- Popular places -->
       <div class="bg-gray-50 py-32">
         <!-- Container -->
         <div class="w-9/12 mx-auto">
@@ -688,7 +688,327 @@
         </div>
         <!-- /Container -->
       </div>
-      <!-- /Section -->
+      <!-- /Popular places -->
+      <!-- Discover By Categories ...................................................-->
+      <div class="bg-sky-50 py-32">
+        <!-- Container -->
+        <div class="w-8/12 mx-auto">
+          <!-- title -->
+          <div class="text-center mb-12">
+            <p class="text-4xl font-bold text-gray-600 mb-3">
+              Discover By Categories
+            </p>
+            <p class="text-gray-600">Discover Places by categories</p>
+          </div>
+          <!-- /title -->
+          <div>
+            <div class="grid grid-cols-4 gap-10">
+              <!-- category -->
+              <a
+                href="#"
+                class="p-4 bg-white w-60 shadow hover:shadow space-y-5 rounded-lg"
+              >
+                <img
+                  class="w-32 h-32 mx-auto rounded-full"
+                  src="./assets/images/icons/categorie-01.png"
+                  alt="categorie-01"
+                />
+                <div class="space-y-2 text-center">
+                  <p class="text-gray-700 text-lg font-semibold mb-3">
+                    Coffee & Tea
+                  </p>
+                </div> </a
+              ><!-- /category -->
+              <!-- category -->
+              <a
+                href="#"
+                class="p-4 bg-white w-60 shadow hover:shadow space-y-5 rounded-lg"
+              >
+                <img
+                  class="w-32 h-32 mx-auto rounded-full"
+                  src="./assets/images/icons/categorie-02.png"
+                  alt="categorie-02"
+                />
+                <div class="space-y-2 text-center">
+                  <p class="text-gray-700 text-lg font-semibold mb-3">
+                    Entertainment
+                  </p>
+                </div> </a
+              ><!-- /category -->
+              <!-- category -->
+              <a
+                href="#"
+                class="p-4 bg-white w-60 shadow hover:shadow space-y-5 rounded-lg"
+              >
+                <img
+                  class="w-32 h-32 mx-auto rounded-full"
+                  src="./assets/images/icons/categorie-09.png"
+                  alt="categorie-09"
+                />
+                <div class="space-y-2 text-center">
+                  <p class="text-gray-700 text-lg font-semibold mb-3">
+                    Restaurants
+                  </p>
+                </div> </a
+              ><!-- /category -->
+              <!-- category -->
+              <a
+                href="#"
+                class="p-4 bg-white w-60 shadow hover:shadow space-y-5 rounded-lg"
+              >
+                <img
+                  class="w-32 h-32 mx-auto rounded-full"
+                  src="./assets/images/icons/categorie-04.png"
+                  alt="categorie-04"
+                />
+                <div class="space-y-2 text-center">
+                  <p class="text-gray-700 text-lg font-semibold mb-3">
+                    Health & Medical
+                  </p>
+                </div> </a
+              ><!-- /category -->
+              <!-- category -->
+              <a
+                href="#"
+                class="p-4 bg-white w-60 shadow hover:shadow space-y-5 rounded-lg"
+              >
+                <img
+                  class="w-32 h-32 mx-auto rounded-full"
+                  src="./assets/images/icons/categorie-05.png"
+                  alt="categorie-05"
+                />
+                <div class="space-y-2 text-center">
+                  <p class="text-gray-700 text-lg font-semibold mb-3">
+                    Education
+                  </p>
+                </div> </a
+              ><!-- /category -->
+              <!-- category -->
+              <a
+                href="#"
+                class="p-4 bg-white w-60 shadow hover:shadow space-y-5 rounded-lg"
+              >
+                <img
+                  class="w-32 h-32 mx-auto rounded-full"
+                  src="./assets/images/icons/categorie-06.png"
+                  alt="categorie-06"
+                />
+                <div class="space-y-2 text-center">
+                  <p class="text-gray-700 text-lg font-semibold mb-3">
+                    Automotive
+                  </p>
+                </div> </a
+              ><!-- /category -->
+              <!-- category -->
+              <a
+                href="#"
+                class="p-4 bg-white w-60 shadow hover:shadow space-y-5 rounded-lg"
+              >
+                <img
+                  class="w-32 h-32 mx-auto rounded-full"
+                  src="./assets/images/icons/categorie-07.png"
+                  alt="categorie-07"
+                />
+                <div class="space-y-2 text-center">
+                  <p class="text-gray-700 text-lg font-semibold mb-3">
+                    Home Service
+                  </p>
+                </div> </a
+              ><!-- /category -->
+              <!-- category -->
+              <a
+                href="#"
+                class="p-4 bg-white w-60 shadow hover:shadow space-y-5 rounded-lg"
+              >
+                <img
+                  class="w-32 h-32 mx-auto rounded-full"
+                  src="./assets/images/icons/categorie-08.png"
+                  alt="categorie-08"
+                />
+                <div class="space-y-2 text-center">
+                  <p class="text-gray-700 text-lg font-semibold mb-3">
+                    Shopping
+                  </p>
+                </div> </a
+              ><!-- /category -->
+            </div>
+            <div class="mt-12 text-center">
+              <button
+                class="rounded-md py-2.5 px-6 bg-white border border-gray-100 text-lg shadow hover:shadow-lg text-gray-600"
+              >
+                🎈 Discover More
+              </button>
+            </div>
+          </div>
+        </div>
+        <!-- /container -->
+      </div>
+      <!-- /Discover By Categories -->
+      <!-- Collections ..........................................................-->
+      <div class="bg-slate-100 py-32">
+        <div class="w-8/12 mx-auto">
+          <!-- title -->
+          <div class="text-center mb-12">
+            <p class="text-4xl font-bold text-gray-600 mb-3">Collections</p>
+            <p class="text-gray-600">
+              Discover List Of Top Places By Collection
+            </p>
+          </div>
+          <!-- /title -->
+          <div>
+            <div class="grid grid-cols-4 gap-10">
+              <div
+                class="relative w-56 h-64 overflow-hidden shadow-md hover:shadow-lg"
+              >
+                <img
+                  class="rounded w-full h-full object-cover shadow"
+                  src="./assets/images/collection-01.jpg"
+                  alt="collection-01"
+                />
+                <div
+                  class="bg-gradient-to-t from-black via-transparent inset-0 absolute rounded"
+                ></div>
+                <div class="absolute bottom-2 left-3">
+                  <p class="text-white text-lg font-semibold">Newly Opened</p>
+                  <p class="text-white text-sm">21 Places</p>
+                </div>
+              </div>
+              <!-- /collection -->
+              <div
+                class="relative w-56 h-64 overflow-hidden shadow-md hover:shadow-lg"
+              >
+                <img
+                  class="rounded w-full h-full object-cover shadow"
+                  src="./assets/images/collection-02.jpg"
+                  alt="collection-02"
+                />
+                <div
+                  class="bg-gradient-to-t from-black via-transparent inset-0 absolute rounded"
+                ></div>
+                <div class="absolute bottom-2 left-3">
+                  <p class="text-white text-lg font-semibold">
+                    Traditional Restaurants
+                  </p>
+                  <p class="text-white text-sm">21 Places</p>
+                </div>
+              </div>
+              <!-- /collection -->
+              <div
+                class="relative w-56 h-64 overflow-hidden shadow-md hover:shadow-lg"
+              >
+                <img
+                  class="rounded w-full h-full object-cover shadow"
+                  src="./assets/images/collection-03.jpg"
+                  alt="collection-03"
+                />
+                <div
+                  class="bg-gradient-to-t from-black via-transparent inset-0 absolute rounded"
+                ></div>
+                <div class="absolute bottom-2 left-3">
+                  <p class="text-white text-lg font-semibold">
+                    Trending This Week
+                  </p>
+                  <p class="text-white text-sm">21 Places</p>
+                </div>
+              </div>
+              <!-- /collection -->
+              <div
+                class="relative w-56 h-64 overflow-hidden shadow-md hover:shadow-lg"
+              >
+                <img
+                  class="rounded w-full h-full object-cover shadow"
+                  src="./assets/images/collection-04.jpg"
+                  alt="collection-04"
+                />
+                <div
+                  class="bg-gradient-to-t from-black via-transparent inset-0 absolute rounded"
+                ></div>
+                <div class="absolute bottom-2 left-3">
+                  <p class="text-white text-lg font-semibold">Luxury Houses</p>
+                  <p class="text-white text-sm">21 Places</p>
+                </div>
+              </div>
+              <!-- /collection -->
+              <div
+                class="relative w-56 h-64 overflow-hidden shadow-md hover:shadow-lg"
+              >
+                <img
+                  class="rounded w-full h-full object-cover shadow"
+                  src="./assets/images/collection-05.jpg"
+                  alt="collection-05"
+                />
+                <div
+                  class="bg-gradient-to-t from-black via-transparent inset-0 absolute rounded"
+                ></div>
+                <div class="absolute bottom-2 left-3">
+                  <p class="text-white text-lg font-semibold">Cheap In Town</p>
+                  <p class="text-white text-sm">21 Places</p>
+                </div>
+              </div>
+              <!-- /collection -->
+              <div
+                class="relative w-56 h-64 overflow-hidden shadow-md hover:shadow-lg"
+              >
+                <img
+                  class="rounded w-full h-full object-cover shadow"
+                  src="./assets/images/collection-06.jpg"
+                  alt="collection-06"
+                />
+                <div
+                  class="bg-gradient-to-t from-black via-transparent inset-0 absolute rounded"
+                ></div>
+                <div class="absolute bottom-2 left-3">
+                  <p class="text-white text-lg font-semibold">Newly Opened</p>
+                  <p class="text-white text-sm">21 Places</p>
+                </div>
+              </div>
+              <!-- /collection -->
+              <div
+                class="relative w-56 h-64 overflow-hidden shadow-md hover:shadow-lg"
+              >
+                <img
+                  class="rounded w-full h-full object-cover shadow"
+                  src="./assets/images/collection-07.jpg"
+                  alt="collection-07"
+                />
+                <div
+                  class="bg-gradient-to-t from-black via-transparent inset-0 absolute rounded"
+                ></div>
+                <div class="absolute bottom-2 left-3">
+                  <p class="text-white text-lg font-semibold">Newly Opened</p>
+                  <p class="text-white text-sm">21 Places</p>
+                </div>
+              </div>
+              <!-- /collection -->
+              <div
+                class="relative w-56 h-64 overflow-hidden shadow-md hover:shadow-lg"
+              >
+                <img
+                  class="rounded w-full h-full object-cover shadow"
+                  src="./assets/images/collection-08.jpg"
+                  alt="collection-08"
+                />
+                <div
+                  class="bg-gradient-to-t from-black via-transparent inset-0 absolute rounded"
+                ></div>
+                <div class="absolute bottom-2 left-3">
+                  <p class="text-white text-lg font-semibold">Newly Opened</p>
+                  <p class="text-white text-sm">21 Places</p>
+                </div>
+              </div>
+              <!-- /collection -->
+            </div>
+            <div class="mt-12 text-center">
+              <button
+                class="rounded-md py-2.5 px-6 bg-white border border-gray-100 text-lg shadow hover:shadow-lg text-gray-600"
+              >
+                ✨ More Collections
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- /Collections -->
     </div>
     <!-- /Body(Main-content) ...............................................................-->
   </body>
