--- a/src/index.html
+++ b/src/index.html
@@ -1009,6 +1009,113 @@
         </div>
       </div>
       <!-- /Collections -->
+      <!-- Teams .............................................................-->
+      <div class="bg-gray-50 py-36 relative">
+        <div class="w-8/12 mx-auto">
+          <div class="flex items-center gap-3">
+            <div class="w-1/2">
+              <div class="food w-1/2 h-full absolute top-0 left-0 bottom-0 opacity-30"></div>
+              <div class="w-1/2 bg-gradient-to-l from-gray-50 via-transparent absolute top-0 left-0 bottom-0 h-full"></div>
+              <div class="flex gap-12">
+                <div class="flex flex-col gap-12">
+                  <div class="relative">
+                    <img
+                      class="w-48 h-60 object-cover rounded-md shadow-md"
+                      src="./assets/images/team/team-01.jpg"
+                      alt="team-01"
+                    />
+                    <div
+                      class="bg-gradient-to-t from-black via-transparent absolute inset-0 rounded-md"
+                    ></div>
+                    <div class="absolute bottom-2 left-3 text-white text-sm">
+                      <p class="font-semibold">Ossama</p>
+                      <p>CEO</p>
+                    </div>
+                  </div>
+                  <!-- /team member -->
+                  <div class="relative">
+                    <img
+                      class="w-48 h-60 object-cover rounded-md shadow-md"
+                      src="./assets/images/team/team-02.webp"
+                      alt="team-02"
+                    />
+                    <div
+                      class="bg-gradient-to-t from-black via-transparent absolute inset-0 rounded-md"
+                    ></div>
+                    <div class="absolute bottom-2 left-3 text-white text-sm">
+                      <p class="font-semibold">Angela Yu</p>
+                      <p>CEO</p>
+                    </div>
+                  </div>
+                  <!-- /team member -->
+                </div>
+                <div class="flex flex-col gap-12 mt-12">
+                  <div class="relative">
+                    <img
+                      class="w-48 h-60 object-cover rounded-md shadow-md"
+                      src="./assets/images/team/team-03.webp"
+                      alt="team-03"
+                    />
+                    <div
+                      class="bg-gradient-to-t from-black via-transparent absolute inset-0 rounded-md"
+                    ></div>
+                    <div class="absolute bottom-2 left-3 text-white text-sm">
+                      <p class="font-semibold">Maximilian</p>
+                      <p>CEO</p>
+                    </div>
+                  </div>
+                  <!-- /team member -->
+                  <div class="relative">
+                    <img
+                      class="w-48 h-60 object-cover rounded-md shadow-md"
+                      src="./assets/images/team/team-04.webp"
+                      alt="team-04"
+                    />
+                    <div
+                      class="bg-gradient-to-t from-black via-transparent absolute inset-0 rounded-md"
+                    ></div>
+                    <div class="absolute bottom-2 left-3 text-white text-sm">
+                      <p class="font-semibold">Mo lemine</p>
+                      <p>CEO</p>
+                    </div>
+                  </div>
+                  <!-- /team member -->
+                  <div></div>
+                </div>
+              </div>
+            </div>
+            <div class="w-1/2">
+              <p class="text-sm fon-bold uppercase text-indigo-500 mb-1">
+                Our Support Heroes
+              </p>
+              <p class="text-4xl font-bold">Meet The Team</p>
+              <p class="mt-3 text-gray-500 text-lg">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore
+                iste quae ad! Assumenda, magnam fugiat natus dolore eveniet,
+                blanditiis, ipsam dolorum corrupti aspernatur cum ipsum officia
+                at optio! Tempora, perferendis.
+              </p>
+              <div class="mt-8">
+                <button
+                  class="mr-4 py-2 px-3 border-2 border-gray-500 fon-semibold text-gray-500 shadow-md hover:bg-gray-500 hover:text-white rounded-md"
+                >
+                  <span class="material-symbols-outlined align-middle mr-1">
+                    groups
+                  </span>
+                  Meet Us
+                </button>
+                <button
+                  class="mr-4 py-2 px-3 border-2 bg-blue-500 border-blue-500 fon-semibold text-white shadow-md hover:bg-blue-600 hover:text-white hover:border-blue-600 rounded-md"
+                >
+                  <span class="material-symbols-outlined align-middle mr-1"> lightbulb </span>
+                  Learn More
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- /Team -->
     </div>
     <!-- /Body(Main-content) ...............................................................-->
   </body>
