Contact Us section

--- a/src/index.html
+++ b/src/index.html
@@ -1199,6 +1199,115 @@
         </div>
       </div>
       <!-- /End Testimonials -->
+      <!-- Start Contact Us ..................................................-->
+      <div class="bg-sky-50 py-36">
+        <div class="w-9/12 mx-auto">
+          <div class="shadow-lg rounded-xl relative">
+            <img
+              class="w-full h-[46rem] object-cover rounded-xl"
+              src="./assets/images/contact-us/photo-1524069290683-0457abfe42c3.jpg"
+              alt="Contact Us"
+            />
+            <div class="bg-black/70 absolute inset-0 h-full rounded-xl"></div>
+            <div class="absolute right-8 left-8 top-24">
+              <div class="flex items-end">
+                <div class="w-1/2 text-gray-100">
+                  <div class="mb-5">
+                    <p class="text-4xl font-bold font-comfortaa mb-5">
+                      Find Us
+                    </p>
+                    <div class="flex gap-6">
+                      <div class="border-r border-white">
+                        <p class="font-bold text-2xl">New York</p>
+                        <p class="text-sm">
+                          Derrick Street Boston, MA 02130 USA
+                        </p>
+                      </div>
+                      <div class="border-r border-white">
+                        <p class="font-bold text-2xl">California</p>
+                        <p class="text-sm">
+                          Derrick Street Boston, MA 02130 USA
+                        </p>
+                      </div>
+                      <div>
+                        <p class="font-bold text-2xl">Delhi</p>
+                        <p class="text-sm">
+                          Derrick Street Boston, MA 02130 USA
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="w-1/2">
+                  <div
+                    class="bg-white max-w-lg rounded-md shadow p-6 ml-auto space-y-6"
+                  >
+                    <div>
+                      <p class="text-4xl font-bold font-monte mb-4">
+                        Get In Touch
+                      </p>
+                      <p>Need Help or have some feedback for us?</p>
+                      <p>Fill out the form below to contact our team.</p>
+                    </div>
+                    <form action="" class="space-y-4">
+                      <div class="flex text-gray-600 gap-10">
+                        <div>
+                          <label for="firstname">First Name</label>
+                          <input
+                            class="py-2 px-3 w-full text-gray-600 rounded-md border mt-0.5"
+                            type="text"
+                            id="firstname"
+                            placeholder="MO lemine"
+                          />
+                        </div>
+                        <div>
+                          <label for="lastname">Last Name</label>
+                          <input
+                            class="py-2 px-3 w-full text-gray-600 rounded-md border mt-0.5"
+                            type="text"
+                            id="lastname"
+                            placeholder="Hamdinou"
+                          />
+                        </div>
+                      </div>
+                      <div>
+                        <label for="email">Email</label>
+                        <input
+                          class="py-2 px-3 w-full text-gray-600 rounded-md border mt-0.5"
+                          type="email"
+                          id="email"
+                          placeholder="mail@example.com"
+                        />
+                      </div>
+                      <div>
+                        <label for="message">Message</label>
+                        <textarea
+                          class="py-2 px-3 w-full text-gray-600 rounded-md border mt-0.5"
+                          id="message"
+                          rows="4"
+                          placeholder="Good Job! I only have this question..."
+                        ></textarea>
+                      </div>
+                      <div>
+                        <button
+                          class="py-2 px-3 rounded-md shadow bg-indigo-600 text-white hover:bg-indigo-500 hover:shadow-xl"
+                        >
+                          <span
+                            class="material-symbols-outlined align-middle mr-1"
+                          >
+                            local_shipping
+                          </span>
+                          Get In Touch
+                        </button>
+                      </div>
+                    </form>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <!-- /Body(Main-content) ...............................................................-->
   </body>
