--- a/src/index.html
+++ b/src/index.html
@@ -1308,6 +1308,194 @@
           </div>
         </div>
       </div>
+      <!-- /End Contact Us -->
+      <!-- Start Feactures ...................................................-->
+      <div class="bg-slate-50 py-36">
+        <div class="w-8/12 mx-auto">
+          <div class="text-center text-gray-600 mb-12">
+            <p class="text-4xl font-bold mb-2">Our Valuable Features</p>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error
+              inventore dolorem
+            </p>
+          </div>
+          <!-- Cards container -->
+          <div class="grid grid-cols-3 gap-16">
+            <div class="p-4 rounded-md hover:bg-white hover:shadow-lg">
+              <button
+                class="text-gray-600 bg-slate-100 p-2 rounded-md shadow-md"
+              >
+                <svg
+                  class="w-6 h-6"
+                  fill="none"
+                  stroke="#4F46E5"
+                  viewBox="0 0 24 24"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path d="M12 14l9-5-9-5-9 5 9 5z"></path>
+                  <path
+                    d="M12 14l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14z"
+                  ></path>
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M12 14l9-5-9-5-9 5 9 5zm0 0l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14zm-4 6v-7.5l4-2.222"
+                  ></path>
+                </svg>
+              </button>
+              <p class="text-lg font-bold mt-3 mb-2 text-gray-600">
+                Unlimited Chats
+              </p>
+              <p class="text-gray-500">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis,
+              </p>
+            </div>
+            <!-- feature box -->
+            <div class="p-4 rounded-md hover:bg-white hover:shadow-lg">
+              <button
+                class="text-gray-600 bg-slate-100 p-2 rounded-md shadow-md"
+              >
+                <svg
+                  class="w-6 h-6"
+                  fill="none"
+                  stroke="#4f46e5"
+                  viewBox="0 0 24 24"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M19.428 15.428a2 2 0 00-1.022-.547l-2.387-.477a6 6 0 00-3.86.517l-.318.158a6 6 0 01-3.86.517L6.05 15.21a2 2 0 00-1.806.547M8 4h8l-1 1v5.172a2 2 0 00.586 1.414l5 5c1.26 1.26.367 3.414-1.415 3.414H4.828c-1.782 0-2.674-2.154-1.414-3.414l5-5A2 2 0 009 10.172V5L8 4z"
+                  ></path>
+                </svg>
+              </button>
+              <p class="text-lg font-bold mt-3 mb-2 text-gray-600">
+                Multiple Agent
+              </p>
+              <p class="text-gray-500">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis,
+              </p>
+            </div>
+            <!-- feature box -->
+            <div class="p-4 rounded-md hover:bg-white hover:shadow-lg">
+              <button
+                class="text-gray-600 bg-slate-100 p-2 rounded-md shadow-md"
+              >
+                <svg
+                  class="w-6 h-6"
+                  fill="none"
+                  stroke="#4F46E5"
+                  viewBox="0 0 24 24"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M16 8v8m-4-5v5m-4-2v2m-2 4h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z"
+                  ></path>
+                </svg>
+              </button>
+              <p class="text-lg font-bold mt-3 mb-2 text-gray-600">
+                Departments
+              </p>
+              <p class="text-gray-500">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis,
+              </p>
+            </div>
+            <!-- feature box -->
+            <div class="p-4 rounded-md hover:bg-white hover:shadow-lg">
+              <button
+                class="text-gray-600 bg-slate-100 p-2 rounded-md shadow-md"
+              >
+                <svg
+                  class="w-6 h-6"
+                  fill="none"
+                  stroke="#4F46E5"
+                  viewBox="0 0 24 24"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M9 3v2m6-2v2M9 19v2m6-2v2M5 9H3m2 6H3m18-6h-2m2 6h-2M7 19h10a2 2 0 002-2V7a2 2 0 00-2-2H7a2 2 0 00-2 2v10a2 2 0 002 2zM9 9h6v6H9V9z"
+                  ></path>
+                </svg>
+              </button>
+              <p class="text-lg font-bold mt-3 mb-2 text-gray-600">
+                Super Fast
+              </p>
+              <p class="text-gray-500">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis,
+              </p>
+            </div>
+            <!-- feature box -->
+            <div class="p-4 rounded-md hover:bg-white hover:shadow-lg">
+              <button
+                class="text-gray-600 bg-slate-100 p-2 rounded-md shadow-md"
+              >
+                <svg
+                  class="w-6 h-6"
+                  fill="none"
+                  stroke="#4F46E5"
+                  viewBox="0 0 24 24"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M8 5H6a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2v-1M8 5a2 2 0 002 2h2a2 2 0 002-2M8 5a2 2 0 012-2h2a2 2 0 012 2m0 0h2a2 2 0 012 2v3m2 4H10m0 0l3-3m-3 3l3 3"
+                  ></path>
+                </svg>
+              </button>
+              <p class="text-lg font-bold mt-3 mb-2 text-gray-600">
+                Details Log
+              </p>
+              <p class="text-gray-500">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis,
+              </p>
+            </div>
+            <!-- feature box -->
+            <div class="p-4 rounded-md hover:bg-white hover:shadow-lg">
+              <button
+                class="text-gray-600 bg-slate-100 p-2 rounded-md shadow-md"
+              >
+                <svg
+                  class="w-6 h-6"
+                  fill="none"
+                  stroke="#4F46E5"
+                  viewBox="0 0 24 24"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M11 3.055A9.001 9.001 0 1020.945 13H11V3.055z"
+                  ></path>
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M20.488 9H15V3.512A9.025 9.025 0 0120.488 9z"
+                  ></path>
+                </svg>
+              </button>
+              <p class="text-lg font-bold mt-3 mb-2 text-gray-600">Analytics</p>
+              <p class="text-gray-500">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis,
+              </p>
+            </div>
+            <!-- feature box -->
+          </div>
+          <!-- /cards container -->
+        </div>
+      </div>
+      <!-- /End Features -->
     </div>
     <!-- /Body(Main-content) ...............................................................-->
   </body>
