--- a/src/index.html
+++ b/src/index.html
@@ -1496,6 +1496,149 @@
         </div>
       </div>
       <!-- /End Features -->
+      <!-- Start Loading Section .............................................-->
+      <div class="bg-sky-50 py-36">
+        <div class="w-8/12 mx-auto">
+          <div class="text-center text-gray-600 mb-12">
+            <p class="text-4xl font-bold mb-2">Blog Posts</p>
+            <p class="">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum sed
+            </p>
+          </div>
+          <div class="grid grid-cols-3 gap-10">
+            <div
+              class="bg-white rounded-md shadow p-5 flex flex-col items-center justify-center gap-5"
+            >
+              <div class="w-32 h-32 rounded-full bg-gray-200 animate-pulse"></div>
+              <div class="space-y-2">
+                <div
+                  class="w-32 h-6 mx-auto rounded-full bg-gray-200 animate-pulse shadow-sm"
+                ></div>
+                <div class="space-y-1">
+                  <div
+                    class="w-52 h-5 mx-auto rounded-full bg-gray-200 animate-pulse shadow-sm"
+                  ></div>
+                  <div
+                    class="w-44 h-5 mx-auto rounded-full bg-gray-200 animate-pulse shadow-sm"
+                  ></div>
+                </div>
+                <div
+                  class="w-20 h-6 mx-auto rounded-full bg-gray-200 animate-pulse shadow-sm"
+                ></div>
+              </div>
+            </div>
+            <!-- /blog box -->
+            <div
+              class="bg-white rounded-md shadow p-5 flex flex-col items-center justify-center gap-5"
+            >
+              <div class="w-32 h-32 rounded-full bg-gray-200 animate-pulse"></div>
+              <div class="space-y-2">
+                <div
+                  class="w-32 h-6 mx-auto rounded-full bg-gray-200 animate-pulse shadow-sm"
+                ></div>
+                <div class="space-y-1">
+                  <div
+                    class="w-52 h-5 mx-auto rounded-full bg-gray-200 animate-pulse shadow-sm"
+                  ></div>
+                  <div
+                    class="w-44 h-5 mx-auto rounded-full bg-gray-200 animate-pulse shadow-sm"
+                  ></div>
+                </div>
+                <div
+                  class="w-20 h-6 mx-auto rounded-full bg-gray-200 animate-pulse shadow-sm"
+                ></div>
+              </div>
+            </div>
+            <!-- /blog box -->
+            <div
+              class="bg-white rounded-md shadow p-5 flex flex-col items-center justify-center gap-5"
+            >
+              <div class="w-32 h-32 rounded-full bg-gray-200 animate-pulse"></div>
+              <div class="space-y-2">
+                <div
+                  class="w-32 h-6 mx-auto rounded-full bg-gray-200 animate-pulse shadow-sm"
+                ></div>
+                <div class="space-y-1">
+                  <div
+                    class="w-52 h-5 mx-auto rounded-full bg-gray-200 animate-pulse shadow-sm"
+                  ></div>
+                  <div
+                    class="w-44 h-5 mx-auto rounded-full bg-gray-200 animate-pulse shadow-sm"
+                  ></div>
+                </div>
+                <div
+                  class="w-20 h-6 mx-auto rounded-full bg-gray-200 animate-pulse shadow-sm"
+                ></div>
+              </div>
+            </div>
+            <!-- /blog box -->
+            <div class="bg-white rounded-md shadow p-5 space-y-3">
+              <div class="h-44 w-full bg-gray-200 animate-pulse rounded-lg"></div>
+              <div class="space-y-3">
+                <div class="w-8/12 h-5 rounded-full shadow bg-gray-200 animate-pulse"></div>
+                <div class="space-y-1">
+                  <div class="w-full h-5 rounded-full shadow bg-gray-200 animate-pulse"></div>
+                  <div class="w-full h-5 rounded-full shadow bg-gray-200 animate-pulse"></div>
+                  <div class="w-full h-5 rounded-full shadow bg-gray-200 animate-pulse"></div>
+                  <div class="w-full h-5 rounded-full shadow bg-gray-200 animate-pulse"></div>
+                  <div class="w-7/12 h-5 rounded-full shadow bg-gray-200 animate-pulse"></div>
+                </div>
+                <div>
+                  <div class="flex gap-2">
+                    <div class="w-16 h-5 rounded-full bg-gray-200 animate-pulse shadow"></div>
+                    <div class="w-12 h-5 rounded-full bg-gray-200 animate-pulse shadow"></div>
+                    <div class="w-20 h-5 rounded-full bg-gray-200 animate-pulse shadow"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- post box -->
+            <div class="bg-white rounded-md shadow p-5 space-y-3">
+              <div class="h-44 w-full bg-gray-200 animate-pulse rounded-lg"></div>
+              <div class="space-y-3">
+                <div class="w-8/12 h-5 rounded-full shadow bg-gray-200 animate-pulse"></div>
+                <div class="space-y-1">
+                  <div class="w-full h-5 rounded-full shadow bg-gray-200 animate-pulse"></div>
+                  <div class="w-full h-5 rounded-full shadow bg-gray-200 animate-pulse"></div>
+                  <div class="w-full h-5 rounded-full shadow bg-gray-200 animate-pulse"></div>
+                  <div class="w-full h-5 rounded-full shadow bg-gray-200 animate-pulse"></div>
+                  <div class="w-7/12 h-5 rounded-full shadow bg-gray-200 animate-pulse"></div>
+                </div>
+                <div>
+                  <div class="flex gap-2">
+                    <div class="w-16 h-5 rounded-full bg-gray-200 animate-pulse shadow"></div>
+                    <div class="w-12 h-5 rounded-full bg-gray-200 animate-pulse shadow"></div>
+                    <div class="w-20 h-5 rounded-full bg-gray-200 animate-pulse shadow"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- post box -->
+            <div class="bg-white rounded-md shadow p-5 space-y-3">
+              <div class="h-44 w-full bg-gray-200 animate-pulse rounded-lg"></div>
+              <div class="space-y-3">
+                <div class="w-8/12 h-5 rounded-full shadow bg-gray-200 animate-pulse"></div>
+                <div class="space-y-1">
+                  <div class="w-full h-5 rounded-full shadow bg-gray-200 animate-pulse"></div>
+                  <div class="w-full h-5 rounded-full shadow bg-gray-200 animate-pulse"></div>
+                  <div class="w-full h-5 rounded-full shadow bg-gray-200 animate-pulse"></div>
+                  <div class="w-full h-5 rounded-full shadow bg-gray-200 animate-pulse"></div>
+                  <div class="w-7/12 h-5 rounded-full shadow bg-gray-200 animate-pulse"></div>
+                </div>
+                <div>
+                  <div class="flex gap-2">
+                    <div class="w-16 h-5 rounded-full bg-gray-200 animate-pulse shadow"></div>
+                    <div class="w-12 h-5 rounded-full bg-gray-200 animate-pulse shadow"></div>
+                    <div class="w-20 h-5 rounded-full bg-gray-200 animate-pulse shadow"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- post box -->
+          </div>
+        </div>
+      </div>
+      <!-- /Loading Section -->
     </div>
     <!-- /Body(Main-content) ...............................................................-->
   </body>
