--- a/src/index.html
+++ b/src/index.html
@@ -1509,7 +1509,9 @@
             <div
               class="bg-white rounded-md shadow p-5 flex flex-col items-center justify-center gap-5"
             >
-              <div class="w-32 h-32 rounded-full bg-gray-200 animate-pulse"></div>
+              <div
+                class="w-32 h-32 rounded-full bg-gray-200 animate-pulse"
+              ></div>
               <div class="space-y-2">
                 <div
                   class="w-32 h-6 mx-auto rounded-full bg-gray-200 animate-pulse shadow-sm"
@@ -1531,7 +1533,9 @@
             <div
               class="bg-white rounded-md shadow p-5 flex flex-col items-center justify-center gap-5"
             >
-              <div class="w-32 h-32 rounded-full bg-gray-200 animate-pulse"></div>
+              <div
+                class="w-32 h-32 rounded-full bg-gray-200 animate-pulse"
+              ></div>
               <div class="space-y-2">
                 <div
                   class="w-32 h-6 mx-auto rounded-full bg-gray-200 animate-pulse shadow-sm"
@@ -1553,7 +1557,9 @@
             <div
               class="bg-white rounded-md shadow p-5 flex flex-col items-center justify-center gap-5"
             >
-              <div class="w-32 h-32 rounded-full bg-gray-200 animate-pulse"></div>
+              <div
+                class="w-32 h-32 rounded-full bg-gray-200 animate-pulse"
+              ></div>
               <div class="space-y-2">
                 <div
                   class="w-32 h-6 mx-auto rounded-full bg-gray-200 animate-pulse shadow-sm"
@@ -1573,63 +1579,123 @@
             </div>
             <!-- /blog box -->
             <div class="bg-white rounded-md shadow p-5 space-y-3">
-              <div class="h-44 w-full bg-gray-200 animate-pulse rounded-lg"></div>
+              <div
+                class="h-44 w-full bg-gray-200 animate-pulse rounded-lg"
+              ></div>
               <div class="space-y-3">
-                <div class="w-8/12 h-5 rounded-full shadow bg-gray-200 animate-pulse"></div>
+                <div
+                  class="w-8/12 h-5 rounded-full shadow bg-gray-200 animate-pulse"
+                ></div>
                 <div class="space-y-1">
-                  <div class="w-full h-5 rounded-full shadow bg-gray-200 animate-pulse"></div>
-                  <div class="w-full h-5 rounded-full shadow bg-gray-200 animate-pulse"></div>
-                  <div class="w-full h-5 rounded-full shadow bg-gray-200 animate-pulse"></div>
-                  <div class="w-full h-5 rounded-full shadow bg-gray-200 animate-pulse"></div>
-                  <div class="w-7/12 h-5 rounded-full shadow bg-gray-200 animate-pulse"></div>
+                  <div
+                    class="w-full h-5 rounded-full shadow bg-gray-200 animate-pulse"
+                  ></div>
+                  <div
+                    class="w-full h-5 rounded-full shadow bg-gray-200 animate-pulse"
+                  ></div>
+                  <div
+                    class="w-full h-5 rounded-full shadow bg-gray-200 animate-pulse"
+                  ></div>
+                  <div
+                    class="w-full h-5 rounded-full shadow bg-gray-200 animate-pulse"
+                  ></div>
+                  <div
+                    class="w-7/12 h-5 rounded-full shadow bg-gray-200 animate-pulse"
+                  ></div>
                 </div>
                 <div>
                   <div class="flex gap-2">
-                    <div class="w-16 h-5 rounded-full bg-gray-200 animate-pulse shadow"></div>
-                    <div class="w-12 h-5 rounded-full bg-gray-200 animate-pulse shadow"></div>
-                    <div class="w-20 h-5 rounded-full bg-gray-200 animate-pulse shadow"></div>
+                    <div
+                      class="w-16 h-5 rounded-full bg-gray-200 animate-pulse shadow"
+                    ></div>
+                    <div
+                      class="w-12 h-5 rounded-full bg-gray-200 animate-pulse shadow"
+                    ></div>
+                    <div
+                      class="w-20 h-5 rounded-full bg-gray-200 animate-pulse shadow"
+                    ></div>
                   </div>
                 </div>
               </div>
             </div>
             <!-- post box -->
             <div class="bg-white rounded-md shadow p-5 space-y-3">
-              <div class="h-44 w-full bg-gray-200 animate-pulse rounded-lg"></div>
+              <div
+                class="h-44 w-full bg-gray-200 animate-pulse rounded-lg"
+              ></div>
               <div class="space-y-3">
-                <div class="w-8/12 h-5 rounded-full shadow bg-gray-200 animate-pulse"></div>
+                <div
+                  class="w-8/12 h-5 rounded-full shadow bg-gray-200 animate-pulse"
+                ></div>
                 <div class="space-y-1">
-                  <div class="w-full h-5 rounded-full shadow bg-gray-200 animate-pulse"></div>
-                  <div class="w-full h-5 rounded-full shadow bg-gray-200 animate-pulse"></div>
-                  <div class="w-full h-5 rounded-full shadow bg-gray-200 animate-pulse"></div>
-                  <div class="w-full h-5 rounded-full shadow bg-gray-200 animate-pulse"></div>
-                  <div class="w-7/12 h-5 rounded-full shadow bg-gray-200 animate-pulse"></div>
+                  <div
+                    class="w-full h-5 rounded-full shadow bg-gray-200 animate-pulse"
+                  ></div>
+                  <div
+                    class="w-full h-5 rounded-full shadow bg-gray-200 animate-pulse"
+                  ></div>
+                  <div
+                    class="w-full h-5 rounded-full shadow bg-gray-200 animate-pulse"
+                  ></div>
+                  <div
+                    class="w-full h-5 rounded-full shadow bg-gray-200 animate-pulse"
+                  ></div>
+                  <div
+                    class="w-7/12 h-5 rounded-full shadow bg-gray-200 animate-pulse"
+                  ></div>
                 </div>
                 <div>
                   <div class="flex gap-2">
-                    <div class="w-16 h-5 rounded-full bg-gray-200 animate-pulse shadow"></div>
-                    <div class="w-12 h-5 rounded-full bg-gray-200 animate-pulse shadow"></div>
-                    <div class="w-20 h-5 rounded-full bg-gray-200 animate-pulse shadow"></div>
+                    <div
+                      class="w-16 h-5 rounded-full bg-gray-200 animate-pulse shadow"
+                    ></div>
+                    <div
+                      class="w-12 h-5 rounded-full bg-gray-200 animate-pulse shadow"
+                    ></div>
+                    <div
+                      class="w-20 h-5 rounded-full bg-gray-200 animate-pulse shadow"
+                    ></div>
                   </div>
                 </div>
               </div>
             </div>
             <!-- post box -->
             <div class="bg-white rounded-md shadow p-5 space-y-3">
-              <div class="h-44 w-full bg-gray-200 animate-pulse rounded-lg"></div>
+              <div
+                class="h-44 w-full bg-gray-200 animate-pulse rounded-lg"
+              ></div>
               <div class="space-y-3">
-                <div class="w-8/12 h-5 rounded-full shadow bg-gray-200 animate-pulse"></div>
+                <div
+                  class="w-8/12 h-5 rounded-full shadow bg-gray-200 animate-pulse"
+                ></div>
                 <div class="space-y-1">
-                  <div class="w-full h-5 rounded-full shadow bg-gray-200 animate-pulse"></div>
-                  <div class="w-full h-5 rounded-full shadow bg-gray-200 animate-pulse"></div>
-                  <div class="w-full h-5 rounded-full shadow bg-gray-200 animate-pulse"></div>
-                  <div class="w-full h-5 rounded-full shadow bg-gray-200 animate-pulse"></div>
-                  <div class="w-7/12 h-5 rounded-full shadow bg-gray-200 animate-pulse"></div>
+                  <div
+                    class="w-full h-5 rounded-full shadow bg-gray-200 animate-pulse"
+                  ></div>
+                  <div
+                    class="w-full h-5 rounded-full shadow bg-gray-200 animate-pulse"
+                  ></div>
+                  <div
+                    class="w-full h-5 rounded-full shadow bg-gray-200 animate-pulse"
+                  ></div>
+                  <div
+                    class="w-full h-5 rounded-full shadow bg-gray-200 animate-pulse"
+                  ></div>
+                  <div
+                    class="w-7/12 h-5 rounded-full shadow bg-gray-200 animate-pulse"
+                  ></div>
                 </div>
                 <div>
                   <div class="flex gap-2">
-                    <div class="w-16 h-5 rounded-full bg-gray-200 animate-pulse shadow"></div>
-                    <div class="w-12 h-5 rounded-full bg-gray-200 animate-pulse shadow"></div>
-                    <div class="w-20 h-5 rounded-full bg-gray-200 animate-pulse shadow"></div>
+                    <div
+                      class="w-16 h-5 rounded-full bg-gray-200 animate-pulse shadow"
+                    ></div>
+                    <div
+                      class="w-12 h-5 rounded-full bg-gray-200 animate-pulse shadow"
+                    ></div>
+                    <div
+                      class="w-20 h-5 rounded-full bg-gray-200 animate-pulse shadow"
+                    ></div>
                   </div>
                 </div>
               </div>
@@ -1639,6 +1705,59 @@
         </div>
       </div>
       <!-- /Loading Section -->
+      <!-- Start Footer .....................................................-->
+      <footer class="bg-white py-14 border-t">
+        <div class="w-8/12 mx-auto">
+          <div class="flex justify-between py-12">
+            <div>
+              <p class="uppercase font-bold mb-2 text-gray-600">Company</p>
+              <ul>
+                <li class="text-gray-600">Who We Are</li>
+                <li class="text-gray-600">Contact Us</li>
+                <li class="text-gray-600">Support</li>
+              </ul>
+            </div>
+            <div>
+              <p class="uppercase font-bold mb-2 text-gray-600">Business</p>
+              <ul>
+                <li class="text-gray-600">claim Business</li>
+                <li class="text-gray-600">Advertise</li>
+              </ul>
+            </div>
+            <div>
+              <p class="uppercase font-bold mb-2 text-gray-600">Company</p>
+              <ul>
+                <li class="text-gray-600">Who We Are</li>
+                <li class="text-gray-600">Contact Us</li>
+                <li class="text-gray-600">Support</li>
+                <li class="text-gray-600">Privacy Policy</li>
+                <li class="text-gray-600">Terms & Conditions</li>
+              </ul>
+            </div>
+            <div>
+              <p class="uppercase font-bold mb-2 text-gray-600">Follow Us</p>
+              <div class="flex gap-2">
+                <a href="#">
+                  <img src="./assets/images/icons/fb.png" alt="facebbok" /> </a
+                ><a href="#">
+                  <img src="./assets/images/icons/tr.png" alt="twitter" /> </a
+                ><a href="#">
+                  <img src="./assets/images/icons/tg.png" alt="telegram" /> </a
+                ><a href="#">
+                  <img src="./assets/images/icons/ig.png" alt="instagram" />
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- Copyright -->
+          <div class="pt-12">
+            <p class="text-gray-600 text-sm">
+              2022 &copy; Tail List. All Rights Reserved. By MO lemine Hamdinou
+            </p>
+          </div>
+        </div>
+      </footer>
+      <!-- /End Footer -->
     </div>
     <!-- /Body(Main-content) ...............................................................-->
   </body>
